complete before validator

--- a/html/lapalettedugout.html
+++ b/html/lapalettedugout.html
@@ -19,149 +19,157 @@
             <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="un plat de restaurant">
         </figure>
         <section class="menu__restaurant">
-            <h1>
-                La palette du goût
+            <div class="name__restaurant">
+                <h1>
+                    La palette du goût
+                </h1>
                 <div class="heart__checkbox">
                     <input type="checkbox">
                     <i class="fa-regular fa-heart heart--empty"></i>
                     <i class="fas fa-heart heart--fill"></i>
                 </div>
-            </h1>
+            </div>
             <h2>
                 <span class="title__underline">ENTR</span>ÉES
             </h2>
-            <button class="dishe button button--1">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Fricassée d'escargot</strong></p>
-                        <p>Au piment d'Espelette</p>
+            <article class="dishe__container">
+                <button class="dishe button button--1">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Fricassée d'escargot</strong></p>
+                            <p>Au piment d'Espelette</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>25€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>25€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--2">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Foie gras de canard mi-cuit</strong></p>
-                        <p>Et ses copeaux de truffe noire</p>
+                </button>
+                <button class="dishe button button--2">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Foie gras de canard mi-cuit</strong></p>
+                            <p>Et ses copeaux de truffe noire</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>35€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>35€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--3">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Oeuf au plat</strong></p>
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                </button>
+                <button class="dishe button button--3">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Oeuf au plat</strong></p>
+                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>20€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>20€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
+                </button>
+            </article>
             <h2>
                 <span class="title__underline">PLAT</span>S
             </h2>
-            <button class="dishe button button--4">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Filet de boeuf aux herbes</strong></p>
-                        <p>Accompagné de sa ribambelle de légumes</p>
+            <article class="dishe__container">
+                <button class="dishe button button--4">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Filet de boeuf aux herbes</strong></p>
+                            <p>Accompagné de sa ribambelle de légumes</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>40€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>40€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--5">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Parmentier de queue de boeuf</strong></p>
-                        <p>À la truffe noire sur sa purée de panais</p>
+                </button>
+                <button class="dishe button button--5">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Parmentier de queue de boeuf</strong></p>
+                            <p>À la truffe noire sur sa purée de panais</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>35€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>35€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--6">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Filet de turbot</strong></p>
-                        <p>Aux agrumes</p>
+                </button>
+                <button class="dishe button button--6">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Filet de turbot</strong></p>
+                            <p>Aux agrumes</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>44€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>44€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-             <h2>
+                </button>
+            </article>
+           <h2>
                 <span class="title__underline">DESS</span>ERTS
             </h2>
-            <button class="dishe button button--7">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Paris-Brest</strong></p>
-                        <p>Revisité</p>
+            <article class="dishe__container">
+                <button class="dishe button button--7">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Paris-Brest</strong></p>
+                            <p>Revisité</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>18€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>18€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--8">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Macaron au chocolat d'exception</strong></p>
-                        <p>Et glace à la vanille de Madagascar</p>
+                </button>
+                <button class="dishe button button--8">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Macaron au chocolat d'exception</strong></p>
+                            <p>Et glace à la vanille de Madagascar</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>22€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>22€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--9">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Mousse au chocolat</strong></p>
-                        <p>Au piment d'Espelette et à la truffe noire</p>
+                </button>
+                <button class="dishe button button--9">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Mousse au chocolat</strong></p>
+                            <p>Au piment d'Espelette et à la truffe noire</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>23€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>23€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
+                </button>
+            </article>
         </section>
         <section>
             <a href="#" class="order__link">Commander</a>
