--- a/html/ledelicedessens.html
+++ b/html/ledelicedessens.html
@@ -19,150 +19,158 @@
             <img src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="un plat de restaurant">
         </figure>
         <section class="menu__restaurant">
-            <h1>
-                Le délice des sens
+            <div class="name__restaurant">
+                <h1>
+                    Le délice des sens
+                </h1>
                 <div class="heart__checkbox">
                     <input type="checkbox">
                     <i class="fa-regular fa-heart heart--empty"></i>
                     <i class="fas fa-heart heart--fill"></i>
                 </div>
-            </h1>
+            </div>
             <h2>
                 <span class="title__underline">ENTR</span>ÉES
             </h2>
-            <button class="dishe button button--1">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Tartare de thon</strong></p>
-                        <p>Assaisonné au yuzu</p>
+            <article class="dishe__container">
+                <button class="dishe button button--1">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Tartare de thon</strong></p>
+                            <p>Assaisonné au yuzu</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>25€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>25€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--2">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Bouchée de homard croustillant</strong></p>
-                        <p>Et sa farandole de petits légumes</p>
+                </button>
+                <button class="dishe button button--2">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Bouchée de homard croustillant</strong></p>
+                            <p>Et sa farandole de petits légumes</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>35€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>35€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--3">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Velouté de cèpes</strong></p>
-                        <p>Aux truffes</p>
+                </button>
+                <button class="dishe button button--3">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Velouté de cèpes</strong></p>
+                            <p>Aux truffes</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>20€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>20€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
+                </button>
+            </article>
             <h2>
                 <span class="title__underline">PLAT</span>S
             </h2>
-            <button class="dishe button button--4">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Poulet rôti aux herbes de Provence</strong></p>
-                        <p>Et sa crème de truffe</p>
+            <article class="dishe__container">
+                <button class="dishe button button--4">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Poulet rôti aux herbes de Provence</strong></p>
+                            <p>Et sa crème de truffe</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>40€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>40€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--5">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Langouste rôtie</strong></p>
-                        <p>Et ses légumes de saison
-                        </p>
+                </button>
+                <button class="dishe button button--5">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Langouste rôtie</strong></p>
+                            <p>Et ses légumes de saison
+                            </p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>35€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>35€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--6">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Côte de boeuf Angus</strong></p>
-                        <p>Et sa purée de panais</p>
+                </button>
+                <button class="dishe button button--6">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Côte de boeuf Angus</strong></p>
+                            <p>Et sa purée de panais</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>44€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>44€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
+                </button>
+            </article>
              <h2>
                 <span class="title__underline">DESS</span>ERTS
             </h2>
-            <button class="dishe button button--7">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Farandole de desserts</strong></p>
-                        <p>Du chef</p>
+            <article class="dishe__container">
+                <button class="dishe button button--7">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Farandole de desserts</strong></p>
+                            <p>Du chef</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>18€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>18€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--8">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Crème brulée</strong></p>
-                        <p>Revisitée</p>
+                </button>
+                <button class="dishe button button--8">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Crème brulée</strong></p>
+                            <p>Revisitée</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>22€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>22€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--9">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Tiramisu</strong></p>
-                        <p>À la noisette</p>
+                </button>
+                <button class="dishe button button--9">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Tiramisu</strong></p>
+                            <p>À la noisette</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>23€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>23€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
+                </button>
+            </article>
         </section>
         <section>
             <a href="#" class="order__link">Commander</a>
