--- a/html/alafrancaise.html
+++ b/html/alafrancaise.html
@@ -19,149 +19,157 @@
             <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="un plat de restaurant">
         </figure>
         <section class="menu__restaurant">
-            <h1>
-                À la française
+            <div class="name__restaurant">
+                <h1>
+                    À la française
+                </h1>
                 <div class="heart__checkbox">
                     <input type="checkbox">
                     <i class="fa-regular fa-heart heart--empty"></i>
                     <i class="fas fa-heart heart--fill"></i>
                 </div>
-            </h1>
+            </div>
             <h2>
                 <span class="title__underline">ENTR</span>ÉES
             </h2>
-            <button class="dishe button button--1">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Tartare de poulpe acidulé</strong></p>
-                        <p>Aux zestes d'orange</p>
+            <article class="dishe__container">
+                <button class="dishe button button--1">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Tartare de poulpe acidulé</strong></p>
+                            <p>Aux zestes d'orange</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>25€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>25€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--2">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Velouté de légumes d'antan</strong></p>
-                        <p>Carotte, panais, topinambour</p>
+                </button>
+                <button class="dishe button button--2">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Velouté de légumes d'antan</strong></p>
+                            <p>Carotte, panais, topinambour</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>35€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>35€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--3">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Soupe à l'oignon</strong></p>
-                        <p>Revisitée</p>
+                </button>
+                <button class="dishe button button--3">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Soupe à l'oignon</strong></p>
+                            <p>Revisitée</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>20€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>20€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
+                </button>
+            </article>
             <h2>
                 <span class="title__underline">PLAT</span>S
             </h2>
-            <button class="dishe button button--4">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Coquilles Saint-Jacques</strong></p>
-                        <p>Accompagnées d'une purée de panais</p>
+            <article class="dishe__container">
+                <button class="dishe button button--4">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Coquilles Saint-Jacques</strong></p>
+                            <p>Accompagnées d'une purée de panais</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>40€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>40€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--5">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Magret de canard</strong></p>
-                        <p>Et parmentier de pommes de terre</p>
+                </button>
+                <button class="dishe button button--5">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Magret de canard</strong></p>
+                            <p>Et parmentier de pommes de terre</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>35€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>35€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--6">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Pigeonneau d’Ille-et-Vilaine</strong></p>
-                        <p>Sur son lit de gnocchis aux légumes</p>
+                </button>
+                <button class="dishe button button--6">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Pigeonneau d’Ille-et-Vilaine</strong></p>
+                            <p>Sur son lit de gnocchis aux légumes</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>44€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>44€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
+                </button>
+            </article>
             <h2>
                 <span class="title__underline">DESS</span>ERTS
             </h2>
-            <button class="dishe button button--7">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Pétales de violettes glacés</strong></p>
-                        <p>Et purée de noisettes</p>
+            <article class="dishe__container">
+                <button class="dishe button button--7">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Pétales de violettes glacés</strong></p>
+                            <p>Et purée de noisettes</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>18€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>18€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--8">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Fondant au chocolat</strong></p>
-                        <p>Revisité</p>
+                </button>
+                <button class="dishe button button--8">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Fondant au chocolat</strong></p>
+                            <p>Revisité</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>22€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>22€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--9">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Millefeuille croustillant</strong></p>
-                        <p>Myrtilles et pâte d’amande</p>
+                </button>
+                <button class="dishe button button--9">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Millefeuille croustillant</strong></p>
+                            <p>Myrtilles et pâte d’amande</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>23€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>23€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
+                </button>
+            </article>
         </section>
         <section>
             <a href="#" class="order__link">Commander</a>
