--- a/html/lanoteenchantee.html
+++ b/html/lanoteenchantee.html
@@ -19,163 +19,171 @@
             <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="un plat de restaurant">
         </figure>
         <section class="menu__restaurant">
-            <h1>
-                La note enchantée
+            <div class="name__restaurant">
+                <h1>
+                    La note enchantée
+                </h1>
                 <div class="heart__checkbox">
                     <input type="checkbox">
                     <i class="fa-regular fa-heart heart--empty"></i>
                     <i class="fas fa-heart heart--fill"></i>
                 </div>
-            </h1>
+            </div>
             <h2>
                 <span class="title__underline">ENTR</span>ÉES
             </h2>
-            <button class="dishe button button--1">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Ravioles de foie gras</strong></p>
-                        <p>Accompagnés de leur crème à la truffe</p>
+            <article class="dishe__container">
+                <button class="dishe button button--1">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Ravioles de foie gras</strong></p>
+                            <p>Accompagnés de leur crème à la truffe</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>25€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>25€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--2">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Caviar osciètre</strong></p>
-                        <p>Sur blini à la farine de blé noir</p>
+                </button>
+                <button class="dishe button button--2">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Caviar osciètre</strong></p>
+                            <p>Sur blini à la farine de blé noir</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>35€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>35€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--3">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Homard et espuma de potiron</strong></p>
-                        <p>Mariné aux zestes d'orange</p>
+                </button>
+                <button class="dishe button button--3">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Homard et espuma de potiron</strong></p>
+                            <p>Mariné aux zestes d'orange</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>20€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>20€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--4">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Foie gras de canard cuit entier</strong></p>
-                        <p>Confiture de figue et pain toasté</p>
+                </button>
+                <button class="dishe button button--4">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Foie gras de canard cuit entier</strong></p>
+                            <p>Confiture de figue et pain toasté</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>35€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>35€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
+                </button>
+            </article>
             <h2>
                 <span class="title__underline">PLAT</span>S
             </h2>
-            <button class="dishe button button--5">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Noix de coquilles Saint-Jacques</strong></p>
-                        <p>Sur lit de purée de céleri-rave</p>
+            <article class="dishe__container">
+                <button class="dishe button button--5">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Noix de coquilles Saint-Jacques</strong></p>
+                            <p>Sur lit de purée de céleri-rave</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>40€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>40€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--6">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Langoustine poêlée</strong></p>
-                        <p>Purée de patate douce</p>
+                </button>
+                <button class="dishe button button--6">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Langoustine poêlée</strong></p>
+                            <p>Purée de patate douce</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>35€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>35€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--7">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Mijoté de queue de boeuf</strong></p>
-                        <p>Et riz sauvage aux zestes de citron</p>
+                </button>
+                <button class="dishe button button--7">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Mijoté de queue de boeuf</strong></p>
+                            <p>Et riz sauvage aux zestes de citron</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>44€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>44€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
+                </button>
+            </article>
              <h2>
                 <span class="title__underline">DESS</span>ERTS
             </h2>
-            <button class="dishe button button--8">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Macaron noisette et chocolat</strong></p>
-                        <p>Glace au caramel brun et sel de Guérande</p>
+            <article class="dishe__container">
+                <button class="dishe button button--8">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Macaron noisette et chocolat</strong></p>
+                            <p>Glace au caramel brun et sel de Guérande</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>18€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>18€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--9">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Baba au rhum revisité</strong></p>
-                        <p>Avec son coulis de citron</p>
+                </button>
+                <button class="dishe button button--9">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Baba au rhum revisité</strong></p>
+                            <p>Avec son coulis de citron</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>22€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>22€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
-            <button class="dishe button button--10">
-                <div class="dishe__description">
-                    <div class="dishe__text">
-                        <p><strong>Tarte au citron meringuée</strong></p>
-                        <p>Déstructurée</p>
+                </button>
+                <button class="dishe button button--10">
+                    <div class="dishe__description">
+                        <div class="dishe__text">
+                            <p><strong>Tarte au citron meringuée</strong></p>
+                            <p>Déstructurée</p>
+                        </div>
+                        <div class="dishe__price">
+                            <span><strong>23€</strong></span>
+                        </div>
                     </div>
-                    <div class="dishe__price">
-                        <span><strong>23€</strong></span>
+                    <div class="dishe__icone">
+                        <i class="fas fa-check"></i>
                     </div>
-                </div>
-                <div class="dishe__icone">
-                    <i class="fas fa-check"></i>
-                </div>
-            </button>
+                </button>
+            </article>
         </section>
         <section>
             <a href="#" class="order__link">Commander</a>
