--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <header class="header__landing">
         <figure>
-            <img src="./images/logo/ohmyfood.png" alt="logo" />
+            <img src="./images/logo/ohmyfood.png" alt="logo">
         </figure>
         <div class="header__landing--location">
             <i class="fa-solid fa-location-dot"></i>
@@ -39,27 +39,21 @@
                 Fonctionnement
             </h2>
             <div class="navbar">
-                <button class="btn">
-                    <a href="#" class="btn__link">
-                        <p class="btn__order">1</p>
-                        <i class="fa-solid fa-mobile-screen"></i>
-                        <p class="btn__text">Choisissez votre restaurant</p>
-                    </a>
-                </button> 
-                <button class="btn">
-                    <a href="#" class="btn__link">
+                <div class="btn">
+                    <div class="btn__order">1</div>
+                    <i class="fa-solid fa-mobile-screen"></i>
+                    <div class="btn__text">Choisissez votre restaurant</div>
+                </div>
+                <div class="btn">
                         <p class="btn__order">2</p>
                         <i class="fa-solid fa-list"></i>
                         <p class="btn__text">Composez votre menu</p> 
-                    </a> 
-                </button>
-                <button class="btn">
-                    <a href="#" class="btn__link">
-                        <p class="btn__order">3</p>
-                        <i class="fa-solid fa-store"></i>
-                        <p class="btn__text">Dégustez au restaurant</p>
-                    </a>
-                </button>
+                </div>
+                <div class="btn">
+                    <p class="btn__order">3</p>
+                    <i class="fa-solid fa-store"></i>
+                    <p class="btn__text">Dégustez au restaurant</p>
+                </div>
             </div>
         </section>
         <section id="restaurants">
@@ -80,14 +74,14 @@
                             <p>
                                 Ménilmontant
                             </p>
-                            <div class="heart__checkbox">
-                                <input type="checkbox">
-                                <i class="fa-regular fa-heart heart--empty"></i>
-                                <i class="fas fa-heart heart--fill"></i>
-                            </div>
                         </figcaption>
                     </figure>
                 </a>
+                <div class="heart__checkbox">
+                    <input type="checkbox">
+                    <i class="fa-regular fa-heart heart--empty"></i>
+                    <i class="fas fa-heart heart--fill"></i>
+                </div>
             </article>
             <article class="card">
                 <a href="./html/lanoteenchantee.html">
@@ -103,14 +97,14 @@
                             <p>
                                 Charonne
                             </p>
-                            <div class="heart__checkbox">
-                                <input type="checkbox">
-                                <i class="fa-regular fa-heart heart--empty"></i>
-                                <i class="fas fa-heart heart--fill"></i>
-                            </div>
                         </figcaption>
                     </figure>
                 </a>
+                <div class="heart__checkbox">
+                    <input type="checkbox">
+                    <i class="fa-regular fa-heart heart--empty"></i>
+                    <i class="fas fa-heart heart--fill"></i>
+                </div>
             </article>
             <article class="card">
                 <a href="./html/alafrancaise.html">
@@ -126,14 +120,14 @@
                             <p>
                                 Cité Rouge
                             </p>
-                            <div class="heart__checkbox">
-                                <input type="checkbox">
-                                <i class="fa-regular fa-heart heart--empty"></i>
-                                <i class="fas fa-heart heart--fill"></i>
-                            </div>
                         </figcaption>
                     </figure>
                 </a>
+                <div class="heart__checkbox">
+                    <input type="checkbox">
+                    <i class="fa-regular fa-heart heart--empty"></i>
+                    <i class="fas fa-heart heart--fill"></i>
+                </div>
             </article>
             <article class="card">
                 <a href="./html/ledelicedessens.html">
@@ -149,14 +143,14 @@
                             <p>
                                 Folie-Méricourt
                             </p>
-                            <div class="heart__checkbox">
-                                <input type="checkbox">
-                                <i class="fa-regular fa-heart heart--empty"></i>
-                                <i class="fas fa-heart heart--fill"></i>
-                            </div>
                         </figcaption>
                     </figure>
                 </a>
+                <div class="heart__checkbox">
+                    <input type="checkbox">
+                    <i class="fa-regular fa-heart heart--empty"></i>
+                    <i class="fas fa-heart heart--fill"></i>
+                </div>
             </article>
         </section>
     </main>
