--- a/html/lanoteenchantee.html
+++ b/html/lanoteenchantee.html
@@ -33,7 +33,7 @@
                 <span class="title__underline">ENTR</span>ÉES
             </h2>
             <article class="dishe__container">
-                <button class="dishe button button--1">
+                <div class="dishe button button--1">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Ravioles de foie gras</strong></p>
@@ -46,8 +46,8 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
-                <button class="dishe button button--2">
+                </div>
+                <div class="dishe button button--2">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Caviar osciètre</strong></p>
@@ -60,8 +60,8 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
-                <button class="dishe button button--3">
+                </div>
+                <div class="dishe button button--3">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Homard et espuma de potiron</strong></p>
@@ -74,8 +74,8 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
-                <button class="dishe button button--4">
+                </div>
+                <div class="dishe button button--4">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Foie gras de canard cuit entier</strong></p>
@@ -88,13 +88,13 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
+                </div>
             </article>
             <h2>
                 <span class="title__underline">PLAT</span>S
             </h2>
             <article class="dishe__container">
-                <button class="dishe button button--5">
+                <div class="dishe button button--5">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Noix de coquilles Saint-Jacques</strong></p>
@@ -107,8 +107,8 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
-                <button class="dishe button button--6">
+                </div>
+                <div class="dishe button button--6">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Langoustine poêlée</strong></p>
@@ -121,8 +121,8 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
-                <button class="dishe button button--7">
+                </div>
+                <div class="dishe button button--7">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Mijoté de queue de boeuf</strong></p>
@@ -135,13 +135,13 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
+                </div>
             </article>
              <h2>
                 <span class="title__underline">DESS</span>ERTS
             </h2>
             <article class="dishe__container">
-                <button class="dishe button button--8">
+                <div class="dishe button button--8">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Macaron noisette et chocolat</strong></p>
@@ -154,8 +154,8 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
-                <button class="dishe button button--9">
+                </div>
+                <div class="dishe button button--9">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Baba au rhum revisité</strong></p>
@@ -168,8 +168,8 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
-                <button class="dishe button button--10">
+                </div>
+                <div class="dishe button button--10">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Tarte au citron meringuée</strong></p>
@@ -182,7 +182,7 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
+                </div>
             </article>
         </section>
         <section>
