--- a/html/lapalettedugout.html
+++ b/html/lapalettedugout.html
@@ -33,7 +33,7 @@
                 <span class="title__underline">ENTR</span>ÉES
             </h2>
             <article class="dishe__container">
-                <button class="dishe button button--1">
+                <div class="dishe button button--1">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Fricassée d'escargot</strong></p>
@@ -46,8 +46,8 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
-                <button class="dishe button button--2">
+                </div>
+                <div class="dishe button button--2">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Foie gras de canard mi-cuit</strong></p>
@@ -60,8 +60,8 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
-                <button class="dishe button button--3">
+                </div>
+                <div class="dishe button button--3">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Oeuf au plat</strong></p>
@@ -74,13 +74,13 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
+                </div>
             </article>
             <h2>
                 <span class="title__underline">PLAT</span>S
             </h2>
             <article class="dishe__container">
-                <button class="dishe button button--4">
+                <div class="dishe button button--4">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Filet de boeuf aux herbes</strong></p>
@@ -93,8 +93,8 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
-                <button class="dishe button button--5">
+                </div>
+                <div class="dishe button button--5">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Parmentier de queue de boeuf</strong></p>
@@ -107,8 +107,8 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
-                <button class="dishe button button--6">
+                </div>
+                <div class="dishe button button--6">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Filet de turbot</strong></p>
@@ -121,13 +121,13 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
+                </div>
             </article>
            <h2>
                 <span class="title__underline">DESS</span>ERTS
             </h2>
             <article class="dishe__container">
-                <button class="dishe button button--7">
+                <div class="dishe button button--7">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Paris-Brest</strong></p>
@@ -140,8 +140,8 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
-                <button class="dishe button button--8">
+                </div>
+                <div class="dishe button button--8">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Macaron au chocolat d'exception</strong></p>
@@ -154,8 +154,8 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
-                <button class="dishe button button--9">
+                </div>
+                <div class="dishe button button--9">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Mousse au chocolat</strong></p>
@@ -168,7 +168,7 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
+                </div>
             </article>
         </section>
         <section>
