--- a/html/ledelicedessens.html
+++ b/html/ledelicedessens.html
@@ -33,7 +33,7 @@
                 <span class="title__underline">ENTR</span>ÉES
             </h2>
             <article class="dishe__container">
-                <button class="dishe button button--1">
+                <div class="dishe button button--1">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Tartare de thon</strong></p>
@@ -46,8 +46,8 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
-                <button class="dishe button button--2">
+                </div>
+                <div class="dishe button button--2">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Bouchée de homard croustillant</strong></p>
@@ -60,8 +60,8 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
-                <button class="dishe button button--3">
+                </div>
+                <div class="dishe button button--3">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Velouté de cèpes</strong></p>
@@ -74,13 +74,13 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
+                </div>
             </article>
             <h2>
                 <span class="title__underline">PLAT</span>S
             </h2>
             <article class="dishe__container">
-                <button class="dishe button button--4">
+                <div class="dishe button button--4">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Poulet rôti aux herbes de Provence</strong></p>
@@ -93,8 +93,8 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
-                <button class="dishe button button--5">
+                </div>
+                <div class="dishe button button--5">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Langouste rôtie</strong></p>
@@ -108,8 +108,8 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
-                <button class="dishe button button--6">
+                </div>
+                <div class="dishe button button--6">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Côte de boeuf Angus</strong></p>
@@ -122,13 +122,13 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
+                </div>
             </article>
              <h2>
                 <span class="title__underline">DESS</span>ERTS
             </h2>
             <article class="dishe__container">
-                <button class="dishe button button--7">
+                <div class="dishe button button--7">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Farandole de desserts</strong></p>
@@ -141,8 +141,8 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
-                <button class="dishe button button--8">
+                </div>
+                <div class="dishe button button--8">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Crème brulée</strong></p>
@@ -155,8 +155,8 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
-                <button class="dishe button button--9">
+                </div>
+                <div class="dishe button button--9">
                     <div class="dishe__description">
                         <div class="dishe__text">
                             <p><strong>Tiramisu</strong></p>
@@ -169,7 +169,7 @@
                     <div class="dishe__icone">
                         <i class="fas fa-check"></i>
                     </div>
-                </button>
+                </div>
             </article>
         </section>
         <section>
