--- a/html/lanoteenchantee.html
+++ b/html/lanoteenchantee.html
@@ -7,7 +7,7 @@
     <title>La note enchantée</title>
     <script src="https://kit.fontawesome.com/67673b6d3e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="./css/prefixed/style.css">
+    <link rel="stylesheet" href="../css/prefixed/style.css">
 </head>
 <body>
     <header class="header__restaurant">
